--- a/index.html
+++ b/index.html
@@ -5,66 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        .rps {
+            position: absolute;
+            top: 50%;
+            right: 50%;
+            margin-top: -65px;
+            transform: translateX(40%)
+        }
         ul {
+            
             list-style-type: none;
             display: flex;
-            gap: 30px;
-            justify-content: center;
-            margin-left: -100px;
-        }
-        ul li {
-            justify-content: center;
-            text-align: center;
-        }
-
-        .won{
-            background-color: green;
-            width: 50px;
-            height: 50px;
-            margin: 0 auto;
-        }
-
-        .lose{
-            background-color: red;
-            width: 50px;
-            height: 50px;
-            margin: 0 auto;
-        }
-
-        .draw{
-            background-color: yellow;
-            width: 50px;
-            height: 50px;
-            margin: 0 auto;
-        }
-
-        .incorrect{
-            background-color: gray;
-            width: 50px;
-            height: 50px;
-            margin: 0 auto;
+            gap: 50px;
         }
 
         button {
-            position: absolute;
-            left:50%;
-		    top:50%;  
-            margin-left: -100px;
-            margin-top: -100px;          
             width: 100px;
             height: 100px;
+            border: 0;
+            cursor: pointer;
+        }
+
+        .results {
+            position: absolute;
+            left: 47.5%;
+            font-size: 30px;
+            display: flex;
+            gap: 10px;
         }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <button id="play" onclick="playRound()">PLAY</button>
+    <div class="rps">
+    <img src="https://icons8.com/icon/77722/rock" alt="">
         <ul>
-            <li>You won <div class="won"></div></li>
-            <li>You lose <div class="lose"></div></li>
-            <li>Draw <div class="draw"></div></li>
-            <li>Value incorrect <div class="incorrect"></div></li>
+            <li><button onclick="playRound('rock')"><img src="./img/rock.png" alt="rock"></button></li>
+            <li><button onclick="playRound('paper')"><img src="./img/paper.png" alt="paper"></button></li>
+            <li><button onclick="playRound('scissors')"><img src="./img/scissors.png" alt="scissors"></button></li>
         </ul>
+        <div class="results">
+            <div class="score" id="player-score">0</div>
+            x
+            <div class="score" id="computer-score">0</div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
