--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             gap: 10px;
         }
     </style>
-    <title>Document</title>
+    <title>RPS - Rock Paper Scissors</title>
 </head>
 <body>
     <div class="rps">
